# coldsteel

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  HaxeWrapperBuilder.hx  README.md  SdkBuilder.hx  build.bat  build.command  build.sh  build_coldsteel_emscripten.bat  build_emscripten.bat  build_emscripten.sh  build_haxe_wrappers.bat  build_haxe_wrappers.sh  build_irrlicht_emscripten.bat  build_win95.bat  coldsteel.cpp  coldsteel.i  compile.bat  compress.bat  conf.py  defs.txt  gen_doc.py  index.rst  prepare.bat  prepare_coldsteel_emscripten.bat  prepare_irrlicht_emscripten.bat  process_defs.py  run_examples.bat  styles.css
.github/scripts/: zip_build_dir.py
.github/workflows/: build_emscripten.yml  release_emscripten.yml
_build/: Info.plist  README.md  coldsteel.html  coldsteel.icns  csbuild  csbuild.bat  csbuild.py  csrun  csrun.bat  csserve  csserve.bat  csserver  csserver.bat
_build/examples/: 01-primitives.as  01-primitives.lua  02-triangle.as  02-triangle.lua  box.as  fog.as  gui.as  hello.as  joystick.as  lighting.as  lightmap.as  listener.as  mode_selector.as  shadows.as  sprites.as  test.as  xml.as
_build/examples/01-primitives/: main.lua
_build/examples/02-triangle/: main.lua
_build/examples/assets/: example.xml  liberation_mono.xml  tahoma.xml  tahoma_bold.xml
_build/examples/box/: main.lua
_build/examples/box_lightmap/: main.lua
_build/examples/collision/: main.lua
_build/examples/driver/: main.lua
_build/examples/editor/: config.xml  fixedsys.xml  main.lua  segoe_ui.xml
_build/examples/fog/: main.lua
_build/examples/hello/: main.lua
_build/examples/joystick/: main.lua
_build/examples/lighting/: main.lua
_build/examples/lightmap/: T_ParkL00.tga  T_ParkL01.tga  T_ParkL02.tga  T_ParkL03.tga  T_ParkL04.tga  main.lua  parking_lot.b3d
_build/examples/listener/: heli-license.txt  main.lua
_build/examples/primitives/: main.lua
_build/examples/render_to_texture/: main.lua
_build/examples/screen_to_world/: main.lua
_build/examples/shadows/: main.lua
_build/examples/specular/: main.lua
_build/examples/sprites/: main.lua
_build/examples/terrain/: config.xml  main.lua
_build/examples/test/: main.lua
_build/examples/texture_from_pixmap/: main.lua
_build/examples/triangle/: main.lua
_build/examples/vertex_lighting/: RuinT00.tga  RuinT05.tga  main.lua  ruin.b3d
_build/examples/viewport/: main.lua
_build/examples/world_to_screen/: main.lua
_build/examples/xml/: main.lua
_build/geany/: filetypes.ColdSteel.conf
geany/: filetypes.Astro.conf  filetypes.ColdSteel.conf
icon/: license.txt
lib/: README.md  libs.md
lib/irrlicht/: CMakeLists.txt  SMaterial.h
lib/irrlicht/include/: IrrCompileConfig.h
lib/irrlicht/source/Irrlicht/MacOSX/: CIrrDeviceMacOSX.h  CIrrDeviceMacOSX.mm
lib/irrlicht184/: CMakeLists.txt
lib/irrlicht184/include/: IrrCompileConfig.h
lib/irrlicht185/: CMakeLists.txt
lib/irrlicht185/include/: EDeviceTypes.h  IrrCompileConfig.h  SIrrCreationParameters.h  SMaterial.h
lib/irrlicht185/source/Irrlicht/: CFileSystem.cpp  CGUIContextMenu.cpp  CGUITabControl.cpp  CImageLoaderJPG.cpp  CIrrDeviceSDL.cpp  CIrrDeviceSDL.h  CIrrDeviceSDL2.cpp  CIrrDeviceSDL2.h  CIrrDeviceWin32.cpp  CIrrDeviceWin32.h  CNullDriver.cpp  CNullDriver.h  COSOperator.cpp  COpenGLDriver.cpp  COpenGLDriver.h  COpenGLExtensionHandler.cpp  COpenGLExtensionHandler.h  COpenGLShaderMaterialRenderer.h  COpenGLTexture.h  Irrlicht.cpp  Makefile  os.cpp
lib/irrlicht185/source/Irrlicht/MacOSX/: CIrrDeviceMacOSX.mm
lib/irrlicht190/: CMakeLists.txt
lib/irrlicht190/include/: IrrCompileConfig.h
lib/irrlicht190/source/Irrlicht/: CIrrDeviceOSX.mm
lib/irrlicht190_ogles/: CMakeLists.txt
lib/irrlicht190_ogles/include/: IGUIElement.h  IGUIEnvironment.h  IImage.h  ITexture.h  IVideoDriver.h  IrrCompileConfig.h  SMaterial.h  aabbox3d.h  matrix4.h  plane3d.h
lib/irrlicht190_ogles/source/Irrlicht/: CAnimatedMeshSceneNode.cpp  CAttributes.cpp  CB3DMeshWriter.cpp  CColorConverter.cpp  CColorConverter.h  CD3D9Driver.cpp  CD3D9Driver.h  CGUIEnvironment.cpp  CGUIFileOpenDialog.cpp  CGUIFont.cpp  CIrrDeviceLinux.cpp  CIrrDeviceOSX.mm  CIrrDeviceSDL.cpp  CIrrDeviceWin32.cpp  CMeshManipulator.cpp  CMeshSceneNode.cpp  CNullDriver.cpp  CNullDriver.h  COGLES2Driver.cpp  COGLES2Driver.h  COGLESDriver.cpp  COGLESDriver.h  COpenGLDriver.cpp  COpenGLDriver.h  COpenGLSLMaterialRenderer.cpp  COpenGLSLMaterialRenderer.h  CSoftwareDriver.cpp  CSoftwareDriver2.cpp  CTriangleSelector.cpp  CWebGL1Driver.cpp  CWebGL1Driver.h  IAttribute.h  Irrlicht-gcc.cbp  Irrlicht10.0.vcxproj  Irrlicht10.0.vcxproj.filters  Irrlicht11.0.vcxproj  Irrlicht11.0.vcxproj.filters  Irrlicht12.0.vcxproj  Irrlicht12.0.vcxproj.filters  Irrlicht14.0.vcxproj  (+4 more)
lib/irrlicht190_ogles/source/Irrlicht/zlib/: gzguts.h
lib/raudio/: raudio.c
lib/soloud/src/audiosource/wav/: dr_flac.h  dr_wav.h
lib/zip/: miniz.h
src/: audio_driver.h  audio_driver_null.cpp  audio_driver_openal.cpp  audio_driver_raudio.cpp  audio_driver_soloud.cpp  bitwise.cc  bitwise.cpp  bitwise.h  camera.cc  camera.cpp  camera.h  channel.cc  channel.cpp  channel.h  clipboard.cpp  clipboard.h  color.cpp  color.h  common.h  console.cpp  console.h  core.cc  core.cpp  core.h  dialogs.cpp  dialogs.h  dir.cc  dir.cpp  dir.h  engine.h  entity.cc  entity.cpp  entity.h  filebuffer.cc  filebuffer.h  font.cc  font.cpp  font.h  graphics.cc  graphics.cpp  (+79 more)
src/driver/: audio.h  audio_soloud.cpp  scripting.h  scripting_lua.cc
src/impl/: audio_soloud.h  engine_impl.h  file_system_irrlicht.h  irr_color.h  platform_irrlicht.h  str.h
src/include/: audio.h  engine.h  file_system.h  platform.h  scripting.h  scripting_lua.cc  sdk.h
src/internal/: audio.h  builder.h  platform.h  platform_irrlicht.cpp  scripting.h  scripting_lua.cc  sharedlib.h
src/script_ext/: scriptarray.cpp  scriptarray.h  string.cpp  string.h
src_builder/: builder.cpp  builder.h  dir.hh  file.hh  string.hh  strmanip.hh  vector.hh
